--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,12 +4,35 @@
 }
 
 body {
-    color: #999;
+
 }
 
 #container {
     display: flex;
     flex-direction: column;
+    width: 500px;
+    border: 1px solid black;
+    border-radius: 5px;
     margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.title {
+    margin: 5px auto 5px 10px;
+}
+
+.table {
+    margin: 5px 0px 10px 10px;
+}
+
+.table-body {
+}
+
+tr {
+    height: 30px;
+}
+
+td > a {
+    color: black;
+}
